Ongoing progress of the views, most still need some work/refinement.

--- a/SparkValueDesktopApplication/SparkValueDesktopApplication.csproj
+++ b/SparkValueDesktopApplication/SparkValueDesktopApplication.csproj
@@ -7,4 +7,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Images\SettingsGear.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\SettingsGear.png" />
+  </ItemGroup>
+
 </Project>
