Scaffolding for stores and services in place, will need tweaking for sure.

--- a/SparkValueDesktopApplication/SparkValueDesktopApplication.csproj
+++ b/SparkValueDesktopApplication/SparkValueDesktopApplication.csproj
@@ -15,4 +15,8 @@
     <Resource Include="Images\SettingsGear.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DataTransferObjects\" />
+  </ItemGroup>
+
 </Project>
