--- a/SparkValueDesktopApplication/SparkValueDesktopApplication.csproj
+++ b/SparkValueDesktopApplication/SparkValueDesktopApplication.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\diode.png" />
+    <None Remove="Images\led.png" />
+    <None Remove="Images\potentiometer.png" />
+    <None Remove="Images\resistor.png" />
     <None Remove="Images\SettingsGear.png" />
   </ItemGroup>
 
@@ -16,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Images\diode.png" />
+    <Resource Include="Images\led.png" />
+    <Resource Include="Images\potentiometer.png" />
+    <Resource Include="Images\resistor.png" />
     <Resource Include="Images\SettingsGear.png" />
   </ItemGroup>
 
