--- a/SparkValueBackend/SparkValueBackend.csproj
+++ b/SparkValueBackend/SparkValueBackend.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
   </ItemGroup>
 
 </Project>
