--- a/SparkValueBackend/SparkValueBackend.csproj
+++ b/SparkValueBackend/SparkValueBackend.csproj
@@ -5,9 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<UseWPF>true</UseWPF>
+	<UserSecretsId>d3c85fcc-7cd4-46dc-8f6a-7f20e5f0aa83</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
   </ItemGroup>
