Logic Gates part two.

--- a/SparkValueDesktopApplication/SparkValueDesktopApplication.csproj
+++ b/SparkValueDesktopApplication/SparkValueDesktopApplication.csproj
@@ -9,18 +9,25 @@
 
   <ItemGroup>
     <None Remove="Cursors\Eraser.cur" />
+    <None Remove="Images\ANDGate.png" />
     <None Remove="Images\capacitor.png" />
     <None Remove="Images\diode.png" />
     <None Remove="Images\led.png" />
     <None Remove="Images\LogicGateSymbols.PNG" />
+    <None Remove="Images\NANDGate.png" />
+    <None Remove="Images\NORGate.png" />
+    <None Remove="Images\NOTGate.png" />
+    <None Remove="Images\ORGate.png" />
     <None Remove="Images\potentiometer.png" />
     <None Remove="Images\resistor.png" />
     <None Remove="Images\Rotation.png" />
     <None Remove="Images\SettingsGear.png" />
     <None Remove="Images\transistor.png" />
+    <None Remove="Images\XORGate.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Images\ANDGate.png" />
     <Resource Include="Images\LogicGateSymbols.PNG" />
   </ItemGroup>
 
@@ -37,11 +44,16 @@
     <Resource Include="Images\capacitor.png" />
     <Resource Include="Images\diode.png" />
     <Resource Include="Images\led.png" />
+    <Resource Include="Images\NANDGate.png" />
+    <Resource Include="Images\NORGate.png" />
+    <Resource Include="Images\NOTGate.png" />
+    <Resource Include="Images\ORGate.png" />
     <Resource Include="Images\potentiometer.png" />
     <Resource Include="Images\resistor.png" />
     <Resource Include="Images\Rotation.png" />
     <Resource Include="Images\SettingsGear.png" />
     <Resource Include="Images\transistor.png" />
+    <Resource Include="Images\XORGate.png" />
   </ItemGroup>
 
 </Project>
