--- a/SparkValueDesktopApplication/SparkValueDesktopApplication.csproj
+++ b/SparkValueDesktopApplication/SparkValueDesktopApplication.csproj
@@ -16,6 +16,7 @@
     <None Remove="Images\InductorSymbols.png" />
     <None Remove="Images\led.png" />
     <None Remove="Images\LogicGateSymbols.PNG" />
+    <None Remove="Images\MountingComponentDifference.png" />
     <None Remove="Images\NANDGate.png" />
     <None Remove="Images\NORGate.png" />
     <None Remove="Images\NOTGate.png" />
@@ -26,6 +27,7 @@
     <None Remove="Images\SettingsGear.png" />
     <None Remove="Images\SMDPackage1.png" />
     <None Remove="Images\SMDPackage2.png" />
+    <None Remove="Images\THTComponents.png" />
     <None Remove="Images\THTPackage1.png" />
     <None Remove="Images\transistor.png" />
     <None Remove="Images\XORGate.png" />
@@ -51,6 +53,7 @@
     <Resource Include="Images\capacitor.png" />
     <Resource Include="Images\diode.png" />
     <Resource Include="Images\led.png" />
+    <Resource Include="Images\MountingComponentDifference.png" />
     <Resource Include="Images\NANDGate.png" />
     <Resource Include="Images\NORGate.png" />
     <Resource Include="Images\NOTGate.png" />
@@ -61,6 +64,7 @@
     <Resource Include="Images\SettingsGear.png" />
     <Resource Include="Images\SMDPackage1.png" />
     <Resource Include="Images\SMDPackage2.png" />
+    <Resource Include="Images\THTComponents.png" />
     <Resource Include="Images\THTPackage1.png" />
     <Resource Include="Images\transistor.png" />
     <Resource Include="Images\XORGate.png" />
