--- a/SparkValueDesktopApplication/SparkValueDesktopApplication.csproj
+++ b/SparkValueDesktopApplication/SparkValueDesktopApplication.csproj
@@ -25,6 +25,7 @@
     <None Remove="Images\NORGate.png" />
     <None Remove="Images\NOTGate.png" />
     <None Remove="Images\ORGate.png" />
+    <None Remove="Images\Oscilloscope.png" />
     <None Remove="Images\potentiometer.png" />
     <None Remove="Images\resistor.png" />
     <None Remove="Images\Rotation.png" />
@@ -66,6 +67,7 @@
     <Resource Include="Images\NORGate.png" />
     <Resource Include="Images\NOTGate.png" />
     <Resource Include="Images\ORGate.png" />
+    <Resource Include="Images\Oscilloscope.png" />
     <Resource Include="Images\potentiometer.png" />
     <Resource Include="Images\resistor.png" />
     <Resource Include="Images\Rotation.png" />
