--- a/SparkValueDesktopApplication/SparkValueDesktopApplication.csproj
+++ b/SparkValueDesktopApplication/SparkValueDesktopApplication.csproj
@@ -16,7 +16,11 @@
     <None Remove="Images\ComponentSymbolLibrary.png" />
     <None Remove="Images\diode.png" />
     <None Remove="Images\ExampleInductors.png" />
+    <None Remove="Images\FlushCutters.png" />
+    <None Remove="Images\FluxPen.png" />
+    <None Remove="Images\HelpingHands.png" />
     <None Remove="Images\InductorSymbols.png" />
+    <None Remove="Images\InsulatedMat.png" />
     <None Remove="Images\led.png" />
     <None Remove="Images\LogicGateSymbols.PNG" />
     <None Remove="Images\MountingComponentDifference.png" />
@@ -31,11 +35,20 @@
     <None Remove="Images\potentiometer.png" />
     <None Remove="Images\resistor.png" />
     <None Remove="Images\Rotation.png" />
+    <None Remove="Images\SafetyGlasses.png" />
     <None Remove="Images\SettingsGear.png" />
     <None Remove="Images\SMDPackage1.png" />
     <None Remove="Images\SMDPackage2.png" />
+    <None Remove="Images\SolderingExampleOne.png" />
+    <None Remove="Images\SolderingExampleThree.png" />
+    <None Remove="Images\SolderingExampleTwo.png" />
+    <None Remove="Images\SolderingStationExampleOne.png" />
+    <None Remove="Images\SolderingStationExampleTwo.png" />
+    <None Remove="Images\SolderSucker.png" />
+    <None Remove="Images\SolderWick.png" />
     <None Remove="Images\THTComponents.png" />
     <None Remove="Images\THTPackage1.png" />
+    <None Remove="Images\THTSolderingProcedure.png" />
     <None Remove="Images\transistor.png" />
     <None Remove="Images\USBCable.png" />
     <None Remove="Images\WallAdapter.png" />
@@ -48,7 +61,11 @@
     <Resource Include="Images\BenchtopPowerSupply.png" />
     <Resource Include="Images\ComponentSymbolLibrary.png" />
     <Resource Include="Images\ExampleInductors.png" />
+    <Resource Include="Images\FlushCutters.png" />
+    <Resource Include="Images\FluxPen.png" />
+    <Resource Include="Images\HelpingHands.png" />
     <Resource Include="Images\InductorSymbols.png" />
+    <Resource Include="Images\InsulatedMat.png" />
     <Resource Include="Images\LogicGateSymbols.PNG" />
   </ItemGroup>
 
@@ -77,11 +94,20 @@
     <Resource Include="Images\potentiometer.png" />
     <Resource Include="Images\resistor.png" />
     <Resource Include="Images\Rotation.png" />
+    <Resource Include="Images\SafetyGlasses.png" />
     <Resource Include="Images\SettingsGear.png" />
     <Resource Include="Images\SMDPackage1.png" />
     <Resource Include="Images\SMDPackage2.png" />
+    <Resource Include="Images\SolderingExampleOne.png" />
+    <Resource Include="Images\SolderingExampleThree.png" />
+    <Resource Include="Images\SolderingExampleTwo.png" />
+    <Resource Include="Images\SolderingStationExampleOne.png" />
+    <Resource Include="Images\SolderingStationExampleTwo.png" />
+    <Resource Include="Images\SolderSucker.png" />
+    <Resource Include="Images\SolderWick.png" />
     <Resource Include="Images\THTComponents.png" />
     <Resource Include="Images\THTPackage1.png" />
+    <Resource Include="Images\THTSolderingProcedure.png" />
     <Resource Include="Images\transistor.png" />
     <Resource Include="Images\USBCable.png" />
     <Resource Include="Images\WallAdapter.png" />
